# CellZarr

./: .gitignore  .pre-commit-config.yaml  01_ND2_to_OME-ZARR.ipynb  02_Colony_Segmentation.ipynb  03_Nucleus_Segmentation.ipynb  04_Cell_Tracking_slurm.sh  04_Cell_Tracking_ultrack.py  04_Cell_Tracking_ultrack_all_fovs.py  05_Feature_Extraction_ERK_Oct4.ipynb  README.md  SP_01_ERK_Band_Extraction.ipynb  SP_02_Cell_Velocity_Density_Plot.ipynb  pyproject.toml
configuration/: dask.py  settings.py
data_viewer/: README.MD  data_viewer.py  data_viewer_stp.py  requirements.txt
helper_functions/: 00_Helper_Notebook_delete_labels.ipynb  ome_zarr_data_handler.py
models/: convpaint_colony_segmentation.pkl
