[project]
name = "cellzarr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <=3.12"
dependencies = [
    "pandas",
    "scipy",
    "nd2",
    "scikit-image",
    "matplotlib",
    "tifffile",
    "zarr",
    "ome-zarr",
    "dask",
    "natsort",
    "trackpy",
    "edt",
    "magicgui",
    "ipykernel",
    "jupyterlab",
    "ipywidgets",
    "distributed",
    "dask-jobqueue",
    "bokeh",
    "pyarrow",

]

[project.optional-dependencies]
colony_seg = [
    "napari-convpaint",
    "napari >=0.6.0",
]
stardist_seg = [
    "stardist",
    "csbdeep",
    "tensorflow-cpu",
    "numpy < 2.0.0"
    ]
